Issues with PDF writing - package soul error

--- a/packages.bib
+++ b/packages.bib
@@ -18,7 +18,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2022},
+  year = {2023},
   url = {https://www.R-project.org/},
 }
 
@@ -99,7 +99,7 @@ Tools},
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.42},
+  note = {R package version 1.43},
   url = {https://yihui.org/knitr/},
 }
 
@@ -183,6 +183,14 @@ Tools},
   url = {https://CRAN.R-project.org/package=readxl},
 }
 
+@Manual{R-rvest,
+  title = {rvest: Easily Harvest (Scrape) Web Pages},
+  author = {Hadley Wickham},
+  year = {2022},
+  note = {R package version 1.0.3},
+  url = {https://CRAN.R-project.org/package=rvest},
+}
+
 @Manual{R-scales,
   title = {scales: Scale Functions for Visualization},
   author = {Hadley Wickham and Dana Seidel},
@@ -195,7 +203,7 @@ Tools},
   title = {sf: Simple Features for R},
   author = {Edzer Pebesma},
   year = {2023},
-  note = {R package version 1.0-12},
+  note = {R package version 1.0-13},
   url = {https://CRAN.R-project.org/package=sf},
 }
 
@@ -203,7 +211,7 @@ Tools},
   title = {sp: Classes and Methods for Spatial Data},
   author = {Edzer Pebesma and Roger Bivand},
   year = {2023},
-  note = {R package version 1.6-0},
+  note = {R package version 1.6-1},
   url = {https://CRAN.R-project.org/package=sp},
 }
 
@@ -235,7 +243,7 @@ Tools},
   title = {tidytransit: Read, Validate, Analyze, and Map GTFS Feeds},
   author = {Flavio Poletti and Daniel Herszenhut and Mark Padgham and Tom Buckley and Danton Noriega-Goodwin},
   year = {2023},
-  note = {R package version 1.5.0},
+  note = {R package version 1.5.1},
   url = {https://github.com/r-transit/tidytransit},
 }
 
@@ -372,7 +380,7 @@ Tools},
 }
 
 @Article{sp2005,
-  author = {Edzer J. Pebesma and Roger S. Bivand},
+  author = {Edzer J. Pebesma and Roger Bivand},
   title = {Classes and methods for spatial data in {R}},
   journal = {R News},
   year = {2005},
